Fixed spacing issue

--- a/webapp/src/pages/dashboard/dashboardPage.scss
+++ b/webapp/src/pages/dashboard/dashboardPage.scss
@@ -77,7 +77,6 @@
 
     &__workspace-container {
         max-height: calc(100% - 24px - 16px);
-        padding-bottom: 6px;
         overflow-y: auto;
     }
 }
